modules/gdscript/tests/scripts/runtime/errors/constant_dictionary_erase.gd
const dictionary := {}

func test():
  dictionary.erase(0)
